Fix horizontal scroll

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -13,6 +13,7 @@ body {
     font: 400 16px / 24px macan-regular;
     position: relative;
     width: 100%;
+    overflow-x: hidden;
 }
 
 .main-container {
